@@ -1,5 +1,11 @@
 2008-12-18  Neal H. Walfield  <neal@gnu.org>
 
+	* viengoos/rpc.h (RPC_SEND_MARSHAL): Make the reply messenger the
+	first capability.
+	(RPC_SEND_UNMARSHAL): Likewise.
+
+2008-12-18  Neal H. Walfield  <neal@gnu.org>
+
 	* RPC: Move here from ../hurd.
 
 2008-12-18  Neal H. Walfield  <neal@gnu.org>
